# pyliteral

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/pyliteral/: __init__.py  core.py  exceptions.py  literal_transformer.py  load.py  loads.py  types.py
src/pyliteral/core/: consts.py  types.py
tests/: test_core.py  test_literal_transformer.py  test_load.py  test_loads.py
